--- a/README
+++ b/README
@@ -1,5 +1,11 @@
-Proyecto Wishlist aplicando Patron MVC y Orientación a Objetos
+<H1>Proyecto Wishlist aplicando Patron MVC y Orientación a Objetos</H1>
 
 
 - Creación de varios ficheros a modo de inicio
 - Diseño de la Clase Wish
+
+
+
+
+TODO:
+-Estructura de directorios
