--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-<H1>Proyecto Wishlist aplicando Patron MVC y Orientación a Objetos</H1>
+'''Proyecto Wishlist aplicando Patron MVC y Orientación a Objetos'''
 
 
 - Creación de varios ficheros a modo de inicio
@@ -6,6 +6,6 @@
 
 
 
-
-TODO:
+- - - -
+'''TODO:'''
 -Estructura de directorios
